# house-search

./: debug_fotocasa_pagination.py  debug_fotocasa_props.py  debug_idealista_p2.py  pyproject.toml
.sisyphus/drafts/: idealista-scraper-improvements.md
data/: idealista_p2.html  listings.db
src/house_search/: cli.py  models.py  storage.py
src/house_search/scrapers/: __init__.py  base.py  fotocasa.py  idealista.py  milanuncios.py
src/house_search/web/: app.py
tests/: test_models.py  test_scrapers_fotocasa.py  test_scrapers_idealista.py  test_storage.py
tests/fixtures/: idealista_article.html
