[project]
name = "house-search"
version = "0.1.0"
description = "Scrape and browse rental listings from Idealista and Fotocasa in Santiago de Compostela"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "geopy>=2.4.1",
    "hatchling>=1.29.0",
    "httpx>=0.28.1",
    "numpy<2.4",
    "playwright>=1.58.0",
    "playwright-stealth",
    "pydantic>=2.12.5",
    "rich>=14.3.3",
    "sqlite-utils>=3.39",
    "streamlit>=1.56.0",
]

[tool.uv.sources]
playwright-stealth = { git = "https://github.com/Granitosaurus/playwright-stealth" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/house_search"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[project.scripts]
house-search = "house_search.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
